WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
210259
[MacOS] REGRESSION (
r253275
): Stopping a cloned audio capture track should not stop the original audio track
https://bugs.webkit.org/show_bug.cgi?id=210259
Summary
[MacOS] REGRESSION (r253275): Stopping a cloned audio capture track should no...
youenn fablet
Reported
2020-04-09 02:48:07 PDT
[MacOS] Stopping a cloned audio capture track should not stop the original audio track
Attachments
Patch
(6.35 KB, patch)
2020-04-09 02:57 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch
(7.09 KB, patch)
2020-04-09 03:22 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2020-04-09 02:48:24 PDT
<
rdar://problem/61466486
>
youenn fablet
Comment 2
2020-04-09 02:57:36 PDT
Created
attachment 395929
[details]
Patch
youenn fablet
Comment 3
2020-04-09 03:22:56 PDT
Created
attachment 395932
[details]
Patch
EWS
Comment 4
2020-04-09 08:24:58 PDT
Committed
r259802
: <
https://trac.webkit.org/changeset/259802
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 395932
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug